more fixes on mobile chat css

--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@
     display: flex !important;
     flex-direction: column !important;
     justify-content: space-between !important;
-    min-height: 100% !important;
+    max-height: 99vh !important;
   }
   
   .ChatBox-container{
