--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -100,12 +100,10 @@
 }
 @media screen and (max-width:760px){
   .Chat {
-    grid-template-rows: auto 70px;
-    grid-template-columns: auto;
-    /* display: flex;
+    
+    display: flex;
     flex-direction: column;
-    min-height: 100%; */
-    max-height: 88vh;
+    min-height: 100%;
   }
    .follower.conversation>div>.name{
     display: block;
@@ -114,10 +112,10 @@
     display:none
    }
    .Right-side-chat2{
-    /* display: block;
+    display: block;
     position: relative;
-    min-height: 80vh;
-    margin-bottom: 68px; */
+    min-height: 88vh;
+    margin-bottom: 68px;
    }
    .Left-side-chat2{
     display: none;
